fixed user and admin roles