@@ -1,5 +1,6 @@
 package com.example.BucketList.service;
 
+import com.example.BucketList.domain.Destination;
 import com.example.BucketList.domain.Role;
 import com.example.BucketList.domain.User;
 import com.example.BucketList.dtos.UserDTO;
@@ -7,8 +8,6 @@ import com.example.BucketList.repository.IRoleRepository;
 import com.example.BucketList.repository.IUserRepository;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -26,20 +25,28 @@ public class UserService implements IUserService {
     }
 
     @Override
+    public User saveDestination(Long userId, Destination destination) {
+        User user = this.userRepository.findById(userId).get();
+        List<Destination> bucketList = user.getBucketList();
+        bucketList.add(destination);
+        return this.userRepository.save(user);
+    }
+
+    @Override
     public void saveUser(UserDTO UserDTO) {
         User user = new User();
         user.setEmail(UserDTO.getEmail());
         // encrypt the password using spring security
         user.setPassword(passwordEncoder.encode(UserDTO.getPassword()));
-
-        Role role = roleRepository.findByName("ROLE_ADMIN");
-        if(role == null){
-            role = checkRoleExist();
-        }
-
-        user.setRoles(Arrays.asList(role));
+        Role role = roleRepository.findByName("USER");
+        user.setRoles(List.of(role));
 
         userRepository.save(user);
+    }
+
+    @Override
+    public void deleteUser(Long userId) {
+        userRepository.deleteById(userId);
     }
 
     @Override
@@ -59,11 +66,5 @@ public class UserService implements IUserService {
         UserDTO UserDTO = new UserDTO();
         UserDTO.setEmail(user.getEmail());
         return UserDTO;
-    }
-    
-    private Role checkRoleExist(){
-        Role role = new Role();
-        role.setName("ROLE_ADMIN");
-        return roleRepository.save(role);
     }
 }
